fixed spacing

--- a/src/index.scss
+++ b/src/index.scss
@@ -131,13 +131,12 @@ canvas {
 }
 
 #scoreboard {
-  padding: 5px;
+  padding: 10px;
   position: absolute;
   border: 2px solid yellowgreen;
   box-shadow: 0 0 10px #31b43a;
   /* margin-top: 300px; */
   text-align: center;
-  margin-right: 100px;
   left: 45vw;
   z-index: 1;
   margin-top: 200px;
@@ -237,6 +236,7 @@ button:hover {
   color: aliceblue;
   text-decoration: underline;
   font-weight: bolder;
+  margin-bottom: 10px;
 }
 
 @keyframes shake {
